[workspace]
members = [".", "benches-harness"]

[package]
name = "nmea"
version = "0.7.0"

authors = [
  "Felix Obenhuber <felix@obenhuber.de>",
  "Evgeniy A. Dushistov <dushistov@mail.ru>",
  "Henrik Böving <hargonix@gmail.com>",
  "Lachezar Lechev <elpiel93@gmail.com>",
  "AeroRust <aerospace.rust@gmail.com>",
]

categories = ["parser-implementations", "no-std", "embedded"]
keywords = ["NMEA", "gps", "glonass", "coordinate", "position"]
description = "Simple NMEA 0183 parser"
license = "Apache-2.0"
documentation = "https://docs.rs/nmea"
repository = "https://github.com/AeroRust/nmea"
readme = "README.md"

edition = "2024"
# Update README.md and ci.yml when updating the MSRV!
rust-version = "1.87.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrayvec = { version = "0.7", default-features = false }
chrono = { version = "0.4", default-features = false }
heapless = "0.9"
nom = { version = "8", default-features = false }

# we include num-traits only when `std` is not enabled
# because of `fract()` and `trunc()` methods
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
cfg-if = "1"
serde = { version = "1.0", default-features = false, optional = true }
serde_with = { version = "~3.11", default-features = false, optional = true }

defmt = { version = "1", optional = true }
document-features = { version = "0.2", optional = true }

[dev-dependencies]
approx = "0.5"
doc-comment = "0.3"
pretty_assertions = "1"
quickcheck = { version = "1", default-features = false }
serde_json = "1.0"

[features]
## Default features: `std` & `all-sentences`
default = ["std", "all-sentences"]
## Enable the `std` (standard library) usage
std = ["nom/std", "chrono/std", "arrayvec/std", "serde?/std", "serde_with?/std"]
## Enable derives for (De)Serialization with `serde`
serde = [
    "serde/derive", 
    "serde_with/macros", 
    "serde_with/chrono_0_4", 
    "heapless/serde", 
    "chrono/serde", 
    "arrayvec/serde"
]

## Enable derives of `defmt@1.0` formatting for embedded platforms
defmt = ["dep:defmt", "heapless/defmt"]

## Enable the documentation of features (disabled by default to remove unnecessary to the functionality dependencies)
features-docs = ["dep:document-features"]

#! ## Sentences features
## Enable all sentences
all-sentences = ["GNSS", "waypoint", "maritime", "water", "vendor-specific", "other"]

#! ### Categorised features

## GNSS specific sentences related to the position or speed relative to the ground
GNSS = ["APA", "ALM", "GBS", "GGA", "GLL", "GNS", "GSA", "GST", "GSV", "RMC", "VTG"]
## Waypoint
waypoint = ["AAM", "BOD", "BWC", "BWW", "WNC", "ZFO", "ZTG"]
## Maritime
maritime = ["waypoint", "water", "radar"]
## Radar
radar = ["TTM"]
## Water
water = ["DBK", "DBS", "DPT", "MTW", "VHW"]
## Vendor-specific messages
vendor-specific = ["RMZ"]
## Other
other = ["HDT", "MDA", "MWV", "TXT", "ZDA"]

#! ### Supported sentences (alphabetically ordered)

## Waypoint Arrival Alarm
## (feature: `waypoint`)
AAM = []

## GPS Almanac Data
## (feature: `GNSS`)
ALM = []

## Autopilot Sentence "A"
## (feature: `GNSS`)
APA = []

## Bearing - Waypoint to Waypoint
## (feature: `waypoint`)
BOD = []

## Bearing & Distance to Waypoint - Great Circle
## (feature: `waypoint`)
BWC = []

## Bearing - Waypoint to Waypoint
## (feature: `waypoint`)
BWW = []

## Depth Below Keel
## (feature: `water`)
DBK = []

## Depth Below Surface
## (feature: `water`)
DBS = []

## Depth of Water
## (feature: `water`)
DPT = []

## GPS Satellite Fault Detection
## (feature: `GNSS`)
GBS = []

## * Global Positioning System Fix Data
## (feature: `GNSS`)
GGA = []

## * Geographic Position - Latitude/Longitude
## (feature: `GNSS`)
GLL = []

## * Fix data
## (feature: `GNSS`)
GNS = []

## * GPS DOP and active satellites
## (feature: `GNSS`)
GSA = []

## GPS Pseudorange Noise Statistics
## (feature: `GNSS`)
GST = []

## * Satellites in view
## (feature: `GNSS`)
GSV = []

## Heading - True
## (feature: `other`)
HDT = []

## Meterological Composite
## (feature: `other`)
MDA = []

## Mean Temperature of Water
## (feature: `water`)
MTW = []

## Wind Speed and Angle
## (feature: `other`)
MWV = []

## * Recommended Minimum Navigation Information
## (feature: `GNSS`)
RMC = []

## PGRMZ - Garmin Altitude (Vendor specific)
## (feature: `vendor-specific`)
RMZ = []

## Tracked target message
## (feature: `radar`)
TTM = []

## * Text message
## (feature: `other`)
TXT = []

## Water speed and heading
## (feature: `water`)
VHW = []

## * Track made good and Ground speed
## (feature: `GNSS`)
VTG = []

## Distance - Waypoint to waypoint
## (feature: `waypoint`)
WNC = []

## Time & Date - UTC, day, month, year and local time zone
## (feature: `other`)
ZDA = []

## UTC & Time from origin Waypoint
## (feature: `waypoint`)
ZFO = []

## UTC & Time to Destination Waypoint
## (feature: `waypoint`)
ZTG = []

[[test]]
name = "all_supported_messages"
required-features = ["all-sentences"]

[[test]]
name = "file_log_parser"
required-features = ["all-sentences"]

[[test]]
name = "functional_tests"
required-features = ["all-sentences"]
