[package]
name = "benches-harness"
version = "0.1.0"
edition = "2024"
publish = false

rust-version = "1.87"

[dev-dependencies]
criterion = { version = "0.7" }
nom = { version = "8", default-features = false }
nmea = { path = "../" }

[[bench]]
name = "nom_parsing"
harness = false

[[bench]]
name = "gsv_parser"
harness = false